# semester

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  build.py  environment.yml  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
examples/grades/: examplegrades.csv
examples/lab_assignments/: postlab_1.mkd  prepend.rst
examples/roster/: clips_nro4.WBY
semester/: __main__.py  assignments.py  figures.py  grades.py  makefigures.py  pytem.py  roster.py  skeleton.py
semester/gui/: roster.py  sandals.py
semester/init/: __main__.py  makeoutput.py  makeweb.py  newsem.ui  newsemester.py  newsemgui.py
semester/init/src/: syllabus.tex
semester/util/: canvasgrader.py
tests/: conftest.py
