[build-system]
requires = [
    "hatchling>=1.6.0",
]
build-backend = "hatchling.build"

[project]
name = "semester"
description = "Tools to help with running a semester based course"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" },
]
keywords = [
    "classes",
    "course",
    "exam",
    "grading",
    "lab",
    "school",
    "teaching",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "matplotlib",
    "numpy",
    "plumbum>=1.5",
    "scipy",
    "six",
]
dynamic = [
    "version",
]

[project.scripts]
semester = "semester.__main__:main"
"semester.assignments" = "semester.assignments:main"
"semester.canvas" = "semester.utils.canvasgrader:main"
"semester.figures" = "semester.figures:main"
"semester.roster" = "semester.roster:main"

[project.gui-scripts]
"semester.grades" = "semester.grades:main"
"semester.gui.roster" = "semester.gui.roster:main"

[project.urls]
Homepage = "https://github.com/henryiii/semester"

[tool.hatch.version]
path = "semester/__init__.py"

[tool.isort]
profile = "black"
